--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.0",
+    "@types/yup": "^0.29.13",
     "axios": "^0.21.4",
     "emotion-theming": "^11.0.0",
     "formik": "^2.2.9",
@@ -26,7 +27,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
