--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/yup": "^0.29.13",
     "axios": "^0.21.4",
     "emotion-theming": "^11.0.0",
+    "eslint": "^8.1.0",
     "formik": "^2.2.9",
     "framer-motion": "^4",
     "react": "^17.0.2",
@@ -33,6 +34,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint" : "eslint",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
