--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "semi": true,
-  "trailingComma": "es5",
+  "arrowParens": "always",
+  "printWidth": 100,
+  "trailingComma": "all",
   "tabWidth": 2,
-  "singleQuote": true,
-  "bracketSpacing": true
+  "singleQuote": true
 }
