--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@types/yup": "^0.29.13",
     "axios": "^0.21.4",
     "emotion-theming": "^11.0.0",
-    "eslint": "^8.1.0",
     "formik": "^2.2.9",
     "framer-motion": "^4",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -34,7 +34,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint" : "eslint",
+    "lint": "eslint",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -51,6 +51,19 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-plugin": "^7.14.5",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-jsx-max-len": "^1.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.4.1"
   }
 }
