--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.4",
     "@reduxjs/toolkit": "^1.6.2",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
@@ -21,11 +22,11 @@
     "@types/yup": "^0.29.13",
     "axios": "^0.21.4",
     "emotion-theming": "^11.0.0",
-    "formik": "^2.2.9",
     "framer-motion": "^4",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.20.5",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
